# computerAdmin

./: CMakeLists.txt  README.md
resources/: computerRoom.txt  order.txt  student.txt  teacher.txt
src/: Administrator.cpp  Administrator.h  ComputerRoom.cpp  ComputerRoom.h  Identity.h  Order.cpp  Order.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  globalFile.h  main.cpp
